--- a/.github/workflows/fraud-feature-pipelines.yml
+++ b/.github/workflows/fraud-feature-pipelines.yml
@@ -26,7 +26,8 @@ jobs:
         env: 
           HOPSWORKS_API_KEY: ${{ secrets.HOPSWORKS_API_KEY }}
         run: ./src/LCB-PRJ/scripts/run-fraud-feature-pipelines.sh
-
+        shell: bash 
+        
       - name: publish github pages
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
