--- a/.github/workflows/fraud-feature-pipelines.yml
+++ b/.github/workflows/fraud-feature-pipelines.yml
@@ -25,9 +25,10 @@ jobs:
       - name: execute python workflows from bash script
         env: 
           HOPSWORKS_API_KEY: ${{ secrets.HOPSWORKS_API_KEY }}
+        run: chmod +x ./src/LCB-PRJ/scripts/run-fraud-feature-pipelines.sh
         run: ./src/LCB-PRJ/scripts/run-fraud-feature-pipelines.sh
         shell: bash 
-        
+
       - name: publish github pages
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
