--- a/.github/workflows/fraud-batch-inference-pipeline.yml
+++ b/.github/workflows/fraud-batch-inference-pipeline.yml
@@ -25,8 +25,9 @@ jobs:
       - name: execute python workflows from bash script
         env: 
           HOPSWORKS_API_KEY: ${{ secrets.HOPSWORKS_API_KEY }}
-        run: chmod +x ./src/LCB-PRJ/scripts/run-fraud-batch-inference.sh
-        run: ./src/LCB-PRJ/scripts/run-fraud-batch-inference.sh
+        run: |
+          chmod +x ./src/LCB-PRJ/scripts/run-fraud-batch-inference.sh
+          ./src/LCB-PRJ/scripts/run-fraud-batch-inference.sh
         shell: bash 
 
       - name: publish github pages
