--- a/.github/workflows/fraud-batch-inference-pipeline.yml
+++ b/.github/workflows/fraud-batch-inference-pipeline.yml
@@ -20,7 +20,8 @@ jobs:
       - name: install python packages
         run: |
           python -m pip install --upgrade pip
-          pip-sync --pip-args "--only-binary :all --no-binary torch-cluster,torch-scatter,torch-sparse,torch-spline-conv" requirements.txt
+          pip install -r requirements.txt
+#pip-sync --pip-args "--only-binary :all --no-binary torch-cluster,torch-scatter,torch-sparse,torch-spline-conv" requirements.txt
 #pip install -r requirements.txt
           
       - name: execute python workflows from bash script
